bizinikiwi/pezframe/support/test/tests/construct_runtime_ui/undefined_inherent_part.stderr
error: `Pezpallet` does not have #[pezpallet::inherent] defined, perhaps you should remove `Inherent` from construct_runtime?
  --> tests/construct_runtime_ui/undefined_inherent_part.rs:22:1
   |
22 |   #[pezframe_support::pezpallet]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
66 | / construct_runtime! {
67 | |     pub struct Runtime
68 | |     {
69 | |         System: pezframe_system expanded::{}::{Pezpallet, Call, Storage, Config<T>, Event<T>},
...  |
72 | | }
   | |_- in this macro invocation
   |
   = note: this error originates in the macro `pezpallet::__bizinikiwi_inherent_check::is_inherent_part_defined` which comes from the expansion of the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `create_inherent` found for struct `pezpallet::Pezpallet` in the current scope
  --> tests/construct_runtime_ui/undefined_inherent_part.rs:66:1
   |
28 |       pub struct Pezpallet<T>(_);
   |       ----------------------- function or associated item `create_inherent` not found for this struct
...
66 |   construct_runtime! {
   |  _^
67 | |     pub struct Runtime
68 | |     {
69 | |         System: pezframe_system expanded::{}::{Pezpallet, Call, Storage, Config<T>, Event<T>},
...  |
72 | | }
   | |_^ function or associated item not found in `Pezpallet<Runtime>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following traits define an item `create_inherent`, perhaps you need to implement one of them:
           candidate #1: `CreateBare`
           candidate #2: `ProvideInherent`
   = note: this error originates in the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `is_inherent` found for struct `pezpallet::Pezpallet` in the current scope
  --> tests/construct_runtime_ui/undefined_inherent_part.rs:66:1
   |
28 |       pub struct Pezpallet<T>(_);
   |       ----------------------- function or associated item `is_inherent` not found for this struct
...
66 |   construct_runtime! {
   |  _^
67 | |     pub struct Runtime
68 | |     {
69 | |         System: pezframe_system expanded::{}::{Pezpallet, Call, Storage, Config<T>, Event<T>},
...  |
72 | | }
   | |_^ function or associated item not found in `Pezpallet<Runtime>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following traits define an item `is_inherent`, perhaps you need to implement one of them:
           candidate #1: `IsInherent`
           candidate #2: `ProvideInherent`
   = note: this error originates in the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `check_inherent` found for struct `pezpallet::Pezpallet` in the current scope
  --> tests/construct_runtime_ui/undefined_inherent_part.rs:66:1
   |
28 |       pub struct Pezpallet<T>(_);
   |       ----------------------- function or associated item `check_inherent` not found for this struct
...
66 |   construct_runtime! {
   |  _^
67 | |     pub struct Runtime
68 | |     {
69 | |         System: pezframe_system expanded::{}::{Pezpallet, Call, Storage, Config<T>, Event<T>},
...  |
72 | | }
   | |_^ function or associated item not found in `Pezpallet<Runtime>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `check_inherent`, perhaps you need to implement it:
           candidate #1: `ProvideInherent`
   = note: this error originates in the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no associated item named `INHERENT_IDENTIFIER` found for struct `pezpallet::Pezpallet` in the current scope
  --> tests/construct_runtime_ui/undefined_inherent_part.rs:66:1
   |
28 |       pub struct Pezpallet<T>(_);
   |       ----------------------- associated item `INHERENT_IDENTIFIER` not found for this struct
...
66 |   construct_runtime! {
   |  _^
67 | |     pub struct Runtime
68 | |     {
69 | |         System: pezframe_system expanded::{}::{Pezpallet, Call, Storage, Config<T>, Event<T>},
...  |
72 | | }
   | |_^ associated item not found in `Pezpallet<Runtime>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `INHERENT_IDENTIFIER`, perhaps you need to implement it:
           candidate #1: `ProvideInherent`
   = note: this error originates in the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `is_inherent_required` found for struct `pezpallet::Pezpallet` in the current scope
  --> tests/construct_runtime_ui/undefined_inherent_part.rs:66:1
   |
28 |       pub struct Pezpallet<T>(_);
   |       ----------------------- function or associated item `is_inherent_required` not found for this struct
...
66 |   construct_runtime! {
   |  _^
67 | |     pub struct Runtime
68 | |     {
69 | |         System: pezframe_system expanded::{}::{Pezpallet, Call, Storage, Config<T>, Event<T>},
...  |
72 | | }
   | |_^ function or associated item not found in `Pezpallet<Runtime>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `is_inherent_required`, perhaps you need to implement it:
           candidate #1: `ProvideInherent`
   = note: this error originates in the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `pezpallet::Pezpallet<Runtime>: ProvideInherent` is not satisfied
  --> tests/construct_runtime_ui/undefined_inherent_part.rs:70:3
   |
70 |         Pezpallet: pezpallet expanded::{}::{Pezpallet, Inherent},
   |         ^^^^^^^^^ the trait `ProvideInherent` is not implemented for `pezpallet::Pezpallet<Runtime>`

error[E0277]: the trait bound `pezpallet::Pezpallet<Runtime>: ProvideInherent` is not satisfied
  --> tests/construct_runtime_ui/undefined_inherent_part.rs:66:1
   |
66 | / construct_runtime! {
67 | |     pub struct Runtime
68 | |     {
69 | |         System: pezframe_system expanded::{}::{Pezpallet, Call, Storage, Config<T>, Event<T>},
...  |
72 | | }
   | |_^ the trait `ProvideInherent` is not implemented for `pezpallet::Pezpallet<Runtime>`
   |
   = note: this error originates in the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)
